[project]
name = "json-criteria"
version = "0.0.1-alpha"
authors = [
  { name="Matthew Fay" },
]
description = "WIP"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MatthewFay/json-criteria"
Issues = "https://github.com/MatthewFay/json-criteria/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
