[project]
name = "json-criteria"
version = "0.1.2"
authors = [
  { name="Matthew Fay" },
]
description = "Python library designed for evaluating data against serializable JSON criteria"
keywords = ["json", "criteria", "persistence", "serialization", "serialized", "serializable", "rules", "decisions", "decision-making", "decision making", "conditions", "nested", "nested conditions", "operators", "logic", "eligibility", "dynamic adjustment", "data evaluation", "evaluation", "comparison", "compare", "adaptable", "flexible", "flexibility", "maintainable", "maintainability", "dependency-free"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MatthewFay/json-criteria"
Issues = "https://github.com/MatthewFay/json-criteria/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
